--- a/scss/components/_activities-section.scss
+++ b/scss/components/_activities-section.scss
@@ -1,4 +1,9 @@
 /* section-three*/
+.activities-section{
+    @media screen and (max-width:767px) {
+        display: none;
+    }
+}
 
 .activities-section {
     padding-top: 0;
