--- a/scss/components/_hero-section.scss
+++ b/scss/components/_hero-section.scss
@@ -3,9 +3,9 @@
     padding: 200px 0;
     text-align: center;
     background-color: var(--dark-background-color);
-
+   
     max-width: 1600px;
-    height: 600px;
+    max-height: 600px;
     outline: 1px solid black;
     margin-left: auto;
     margin-right: auto;
@@ -18,28 +18,87 @@
     background-size: cover;
     background-position: center;
 
-
-&__container {
-
-        padding: 0 15px;
-        width: 1200px;
+    @media screen and (min-width: 480px) {
         margin-left: auto;
         margin-right: auto;
+        min-width: 480px;
+        width: 100%;
+        height: 400px;
+        /*padding-top: 118px;*/
+        margin-bottom: 60px;
+    }
+
+    @media screen and (min-width: 768px) {
+        min-width: 768px;
+        width: 100%;
+        height: 400px;
+        /*padding-top: 118px;*/
+    }
+
+    @media screen and (min-width: 1200px) {
+        min-width: 1200px;
+        width: 100%;
+        height: 600px;
+        /*padding-top: 200px;*/
+    }
+
+
+    &__container {
+
+        /*width: 1200px;*/
+        margin-left: auto;
+        margin-right: auto;
+
+        @media screen and (min-width: 480px) {
+            width: 480px;
+            height: 400px;
+        }
+
+        @media screen and (min-width: 768px) {
+            width: 768px;
+        }
+
+        @media screen and (min-width: 1200px) {
+            width: 1200px;
+            padding: 0 15px;
+        }
     }
 
     &__title {
         color: var(--minor-color);
         font-style: normal;
         font-weight: 900;
-        font-size: 44px;
-        line-height: 1.36;
+        /* font-size: 44px;
+        line-height: 1.36;*/
         text-align: center;
         letter-spacing: 0.06em;
         text-transform: uppercase;
-        width: 696px;
+        /*width: 696px;*/
         margin-left: auto;
         margin-right: auto;
         margin-bottom: 30px;
+
+        @media screen and (min-width: 480px) {
+            width: 360px;
+            height: 84px;
+            font-size: 26px;
+            line-height: 1.62;
+        }
+
+        @media screen and (min-width: 768px) {
+            width: 360px;
+            height: 84px;
+            font-size: 26px;
+            line-height: 1.62;
+        }
+
+        @media screen and (min-width: 1200px) {
+            width: 696px;
+            height: 120px;
+            font-size: 44px;
+            line-height: 1.36;
+        }
+
     }
 
     &__button {
@@ -49,15 +108,34 @@
         font-size: 16px;
         line-height: 1.63;
         letter-spacing: 0.06em;
-        padding-left: 32px;
-        padding-top: 10px;
-        padding-right: 32px;
-        padding-bottom: 10px;
+
         border: none;
         border-radius: 5px;
         transition-property: fill, backgroud-color;
         transition-duration: 250ms;
         transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
         transition-delay: none;
+
+        @media screen and (min-width: 480px) {
+            padding-left: 24px;
+            padding-top: 10px;
+            padding-right: 24px;
+            padding-bottom: 10px;
+        }
+
+        @media screen and (min-width: 768px) {
+            padding-left: 24px;
+            padding-top: 10px;
+            padding-right: 24px;
+            padding-bottom: 10px;
+        }
+
+        @media screen and (min-width: 1200px) {
+            padding-left: 32px;
+            padding-top: 14px;
+            padding-right: 32px;
+            padding-bottom: 6px;
+
+        }
     }
 }
