--- a/scss/components/_preferences-section.scss
+++ b/scss/components/_preferences-section.scss
@@ -1,21 +1,53 @@
  /* section-two*/
  .preferences-section {
      padding-top: 94px;
-     padding-bottom: 0;
+     padding-bottom: 94px;
+     
    
      &__container {
      padding: 0 15px;
-     width: 1200px;
+     /*width: 1200px;*/
      margin-left: auto;
      margin-right: auto;
+
+     @media screen and (min-width: 480px) {
+        max-width: 480px;
+        /*margin-left: 0;
+        margin-right: 0;*/
+     }
+
+    @media screen and (min-width: 768px) {
+             width: 768px;
+         }
+
+    @media screen and (min-width: 1200px) {
+    width: 1200px;
+    }
  } 
  
  &__menu {
      list-style: none;
      font-weight: 500;
-     display: flex;
-     align-items: flex-start;
-     justify-content: center;
+    
+
+    @media screen and (min-width: 480px) {
+            display: block;
+            margin-left: auto;
+            margin-right: auto;
+        }
+
+    @media screen and (min-width: 768px) {
+    display: flex;
+    flex-wrap:wrap;
+    align-items: flex-start;
+    justify-content: center;
+        }
+
+    @media screen and (min-width: 1200px) {
+    display: flex;
+    align-items: flex-start;
+    justify-content: center;
+                }
  }
 
  }
@@ -39,6 +71,10 @@
      color: var(--small-section-title-color);
      margin-top: 30px;
      margin-bottom: 10px;
+
+     @media screen and (max-width:1199px) {
+        text-align: center;
+     }
  }
 
  .preferences-section__menu--titled:last-child {
@@ -55,6 +91,24 @@
  .preferences-section__menu--itemed {
      margin-right: 30px;
      width: 270px;
+
+   @media screen and (max-width:480px) {
+    max-width: 430px;
+    margin-left: 0;
+    margin-right: 0;
+   }
+
+     @media screen and(max-width:767px) {
+        margin-bottom: 30px;
+        margin-right: 30px;
+        margin-left: auto;
+        margin-right: auto;
+     }
+
+          @media screen and(max-width:1199px) {
+              margin-bottom: 50px;
+            margin-right: 30px;
+          }
  }
 
  .preferences-section__menu--itemed:last-child {
