--- a/scss/components/_page-header.scss
+++ b/scss/components/_page-header.scss
@@ -1,27 +1,29 @@
 /* header*/
 
 .header__item{
-    @media screen and (max-width:767px) {
-            display: none;
+    @media screen and (max-width:481px) {
+            /*display: none;*/
           
         }
 }
 
-.header__menu{
-    @media screen and (max-width:767px) {
-            display: none;
-        }
 
+
+.header__contacts{
+   /* @media screen and (max-width:481px) {
+            display: none;
+        }*/
 }
 
 .header{
-     @media screen and (max-width: 480px) {
+   @media screen and (max-width: 480px) {
        display: inline-flex;
+       justify-content: space-between;
            width: 480px;
    position: relative;  
  }  
 
-  @media screen and (max-width: 780px){
+ @media screen and (max-width: 780px){
 display: inline-flex;
 width: 780px;
   }
@@ -40,20 +42,18 @@ width: 780px;
        /* width: 1200px;*/
         
 
-  
-                                                                    
 @media screen and(max-width:767px) {
     display: flex;
    width: 767px;
     height: 60px;
 }
 
-@media screen and (min-width:768px) {
+/*@media screen and (min-width:768px) {
     min-width:786px ;
    margin-left: 0;
    margin-right: 0;
     
-}
+}*/
 
 @media screen and (max-width:1199px) {
     width: 1199px;
@@ -68,12 +68,12 @@ width: 780px;
         margin-right: auto;
 
         @media screen and (max-width:480px) {
-           
-            display: flex;
-            
-            margin-right: 0;
-            
-        }
+        
+                display: flex;
+        
+                margin-right: 0;
+        
+            }
     }
 
     &__logo {
@@ -90,6 +90,8 @@ width: 780px;
             display: flex;
             align-items: flex-start;
             justify-content: center;
+
+           
             
         }
     
@@ -113,6 +115,8 @@ width: 780px;
             transition-duration: 250ms;
             transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
             transition-delay: none;
+
+            
            }
        &__contacts:hover {
             color: var(--secondary-color);
@@ -130,9 +134,7 @@ width: 780px;
                 }
                &__link {
                                     font-weight: 500;
-                                    @media screen and (max-width:767px) {
-                                            display: none;
-                                        }
+                                   
                                 }
          &__item {
                                                                     color: var(--small-section-title-color);
@@ -156,8 +158,9 @@ right: 15px;
     padding: 0;
     border: none;
     background-color: transparent;
-    margin-right: auto;
- @media screen and (min-width:767px) {
+    /*margin-right: auto;*/
+    
+ @media screen and (min-width:481px) {
     display: none;
     position: absolute;
         top: 100%;
@@ -174,8 +177,7 @@ right: 15px;
 
 .header__button .header__button--iconed-cross{
 display: none;
-width: 19px;
-height: 19px;
+
 }
 
 
@@ -187,53 +189,74 @@ height: 19px;
     display: none;
 }
 
-.header__button--dropped-down-menu{
-   background-color: aqua;
-   padding: 20px;
-   text-align: center;
-   font-size: 20px;
-   /* display: block;
-    width: 100%;
-    max-width: 480px;
-    max-height: 796px;
- 
+/*.header__button--dropped-down-menu{
+  @media screen and (min-width:481px) {
+        display: none;
+
+}
   
-    background-color: #FFFFFF; 
+}*/
+
+.header__button--dropped-down-menu{
+   
+
+
+
+    position: absolute;
+        top: 100%;
+        left: 0;
+        width: 100%;
+
+        height: 400px;
+
+
+        background-color: rgb(196, 212, 255);
+        padding: 20px;
+        text-align: center;
+        font-size: 40px;
+
+        &.is-open{
+            display: block;
+        }
+
+        @media screen and (max-width:767px) {
+             display: none;
+        }
+
+}
+
+.header__button--dropped-down-menu.is-open{
+   /*@media screen  and (max-width:480px) {
+    display: block;
+position: absolute;
+   top: 100%;
+   left: 0;
+   width: 100%;
+   display: block;
+   background-color: #FFFFFF; 
     padding: 20px;
     box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.04), 0px 2px 4px rgba(0, 0, 0, 0.08), 0px 1px 3px rgba(0, 0, 0, 0.16);
-font-family: 'Roboto';
+    font-family: 'Roboto';
     font-style: normal;
     font-weight: 500;
     font-size: 40px;
     line-height: 47px;
     letter-spacing: 0.02em;
     text-align: center;
-
     color: #212121;
+}  
 
-   
-    @media screen and (max-width:767px) {
-        display: none;
-         &.is-open{
-        display: block;
-    }
-
-    }
-    @media screen and (min-width:768px) {
-              display: flex;
-              justify-content: space-between;
-              flex-grow: 1;
-              
-          }
 }*/
 
-.header__button--dropped-down-menu.is-open{
-display: block;
+
 }
 
 .header .header__container {
-    display: flex;
+    @media screen and (min-width:481px) {
+        display: flex;
     align-items: center;
+    }
+    
 }
 
 .header__logo--blue {
@@ -258,10 +281,10 @@ display: block;
 .header__contacts:not(:last-child) {
     margin-right: 50px;
 
-    @media screen and (min-width:768px) {
+    /*@media screen and (min-width:768px) {
         margin-right: 0;
     }
-}
+}*/
 
 
 .header__contact--iconed {
