--- a/scss/components/_activities-section.scss
+++ b/scss/components/_activities-section.scss
@@ -1,6 +1,6 @@
 /* section-three*/
 .activities-section{
-    @media screen and (max-width:767px) {
+    @media screen and (max-width:1199px) {
         display: none;
     }
 }
@@ -10,11 +10,26 @@
     padding-bottom: 94px;
 
 &__container {
-    padding: 0 15px;
-    width: 1200px;
-    margin-left: auto;
-    margin-right: auto;
-}
+
+        /*padding: 0 15px;*/
+        /*width: 1200px;*/
+        padding-left: 15px;
+        padding-right: 15px;
+        margin-left: auto;
+        margin-right: auto;
+
+        @media screen and (min-width:480px) {
+            width: 480px;
+        }
+
+        @media screen and (min-width:768px) {
+            width: 768px;
+        }
+
+        @media screen and (min-width:1200px) {
+            width: 1200px;
+        }
+    }
 
 &__title {
     font-weight: 700;
