--- a/scss/components/_client-section.scss
+++ b/scss/components/_client-section.scss
@@ -5,11 +5,26 @@
     padding-bottom: 94px;
 
    &__container {
-    padding: 0 15px;
-    width: 1200px;
-    margin-left: auto;
-    margin-right: auto;
-}
+
+        /*padding: 0 15px;*/
+        /*width: 1200px;*/
+        padding-left: 15px;
+        padding-right: 15px;
+        margin-left: auto;
+        margin-right: auto;
+
+        @media screen and (min-width:480px) {
+            width: 480px;
+        }
+
+        @media screen and (min-width:768px) {
+            width: 768px;
+        }
+
+        @media screen and (min-width:1200px) {
+            width: 1200px;
+        }
+    }
  &__title {
     font-weight: 700;
     font-style: normal;
@@ -29,6 +44,22 @@
     margin-left: 0px;
     margin-right: 30px;
     text-align: center;
+    
+    @media screen and (max-width:1199px) {
+        display: flex;
+        flex-wrap: wrap;
+        
+      
+       
+        }
+
+    @media screen and (max-width:767px){
+        flex-basis: 50%;
+        margin: 0 auto;
+       
+    }
+    
+
 }
 &__menu:last-child {
     margin-right: 0;
@@ -47,6 +78,47 @@
     transition-duration: 250ms;
     transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
     transition-delay: none;
+
+
+    
+@media screen and (max-width:785px){
+    margin-bottom: 30px;
+}
+&__item::nth-child(1){
+@media screen and (max-width:785px){
+    margin-right: 30px;
+    
+}
+}
+&__item::nth-child(2) {
+    @media screen and (max-width:785px) {
+        margin-right: 0;
+    }
+}
+&__item::nth-child(3) {
+    @media screen and (max-width:785px) {
+        margin-right: 30px;
+    }
+}
+&__item::nth-child(4) {
+    @media screen and (max-width:785px) {
+        margin-right: 0;
+    }
+}
+&__item::nth-child(5){
+    @media screen and (max-width:785px){
+        margin-bottom: 0;
+        margin-right: 30px;
+    }
+}
+
+&__item::nth-child(6) {
+    @media screen and (max-width:785px) {
+        margin-bottom: 0;
+        margin-right: 0;
+    }
+}
+
 }
 &__item:hover {
     border: 1px solid var(--secondary-color);
