--- a/scss/components/_footer.scss
+++ b/scss/components/_footer.scss
@@ -12,11 +12,26 @@
         margin-right: 93px;
     }
    &__container {
-    padding: 0 15px;
-    width: 1200px;
-    margin-left: auto;
-    margin-right: auto;
-}
+
+        /*padding: 0 15px;*/
+        /*width: 1200px;*/
+        padding-left: 15px;
+        padding-right: 15px;
+        margin-left: auto;
+        margin-right: auto;
+
+        @media screen and (min-width:480px) {
+            width: 480px;
+        }
+
+        @media screen and (min-width:768px) {
+            width: 768px;
+        }
+
+        @media screen and (min-width:1200px) {
+            width: 1200px;
+        }
+    }
  &__address {
      color: var(--minor-color);
      font-size: 14px;
@@ -188,4 +203,119 @@
 
 
     fill: var(--minor-color);
+}
+/*like lesson*/
+.footer__container-mobile {
+    @media screen and (max-width:767px) {
+        display: block;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        text-align: center;
+        
+        
+    }
+   }
+
+   .footer__logo-mobile{
+    @media screen and (max-width:767px){
+        margin: 0 auto;
+    }
+   }
+
+.footer__container--left-mobile {
+    @media screen and (max-width:767px){
+    display: block;
+        flex-direction: column;
+        margin: 0 auto;
+        justify-content: center;
+        align-items: center;
+        text-align: center;
+    }
+}
+
+.footer__container--right-mobile {
+    @media screen and (max-width:767px) {
+display: block;
+margin-left: auto;
+margin-right: auto;
+margin-top: 60px;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    }
+}
+
+.footer__form-mobile {
+@media screen and (max-width:767px) {
+
+
+margin-left: auto;
+    margin-right: auto;
+    margin-top: 60px;
+}
+    
+}
+.footer__network-mobile{
+    @media screen and (max-width:767px){
+display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    }
+}
+
+.footer__title-mobile{
+@media screen and (max-width:767px){
+    text-align: justify;
+margin-left: auto;
+    margin-right: auto;
+}
+}
+
+.footer__button--signed-mobile{
+@media screen and (max-width:767px){
+    margin-top: 20px;
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 40px;
+}
+}
+
+.footer__container-tablet{
+    @media (min-width:768px) and (max-width:1199px){
+     display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+     
+    }
+
+}
+.footer__container--left-tablet{
+  @media (min-width:768px) and (max-width:1199px) {
+    align-items: center;
+  }  
+}
+
+.footer__container--right-tablet {
+@media (min-width:768px) and (max-width:1199px) {
+    align-items: center;
+}
+}
+
+.footer__form-tablet{
+@media (min-width:768px) and (max-width:1199px) {
+width: auto;
+align-items: center;
+margin-top: 100px;
+margin-left: auto;
+margin-right: auto;
+justify-content: center;
+}
+}
+.footer__title-tablet{
+@media (min-width:768px) and (max-width:1199px){
+
+text-align: center;
+}
 }
