--- a/scss/components/_hero-section.scss
+++ b/scss/components/_hero-section.scss
@@ -5,7 +5,9 @@
     background-color: var(--dark-background-color);
    
     max-width: 1600px;
-    max-height: 600px;
+    justify-content: center;
+    height: auto;
+    width: 100vw;
     outline: 1px solid black;
     margin-left: auto;
     margin-right: auto;
@@ -23,7 +25,7 @@
         margin-right: auto;
         min-width: 480px;
         width: 100%;
-        height: 400px;
+        height: auto;
         /*padding-top: 118px;*/
         margin-bottom: 60px;
     }
@@ -31,38 +33,39 @@
     @media screen and (min-width: 768px) {
         min-width: 768px;
         width: 100%;
-        height: 400px;
+        height: auto;
         /*padding-top: 118px;*/
     }
 
     @media screen and (min-width: 1200px) {
         min-width: 1200px;
         width: 100%;
-        height: 600px;
+        height: auto;
         /*padding-top: 200px;*/
     }
 
 
     &__container {
-
-        /*width: 1200px;*/
-        margin-left: auto;
-        margin-right: auto;
-
-        @media screen and (min-width: 480px) {
-            width: 480px;
-            height: 400px;
+    
+            /*padding: 0 15px;*/
+            /*width: 1200px;*/
+            padding-left: 15px;
+            padding-right: 15px;
+            margin-left: auto;
+            margin-right: auto;
+    
+            @media screen and (min-width:480px) {
+                width: 480px;
+            }
+    
+            @media screen and (min-width:768px) {
+                width: 768px;
+            }
+    
+            @media screen and (min-width:1200px) {
+                width: 1200px;
+            }
         }
-
-        @media screen and (min-width: 768px) {
-            width: 768px;
-        }
-
-        @media screen and (min-width: 1200px) {
-            width: 1200px;
-            padding: 0 15px;
-        }
-    }
 
     &__title {
         color: var(--minor-color);
