--- a/scss/components/_modal.scss
+++ b/scss/components/_modal.scss
@@ -11,7 +11,6 @@
     background-color: rgba(0, 0, 0, 0.2);
     transform: scale(1);
     transition: opacity 250ms, visibility 250ms;
-    overflow-y: scroll;
 }
 
 .backdrop.is-hidden {
@@ -35,6 +34,15 @@
     border-radius: 4px;
     opacity: 1;
     transition: opacity 250ms cubic-bezier (0.4, 0, 0.2, 1);
+
+    /*@media screen and (max-width:767px) {
+        display: block;
+        width: 450px;
+        padding-left: 15px;
+        padding-right: 15px;
+        padding-top: 93px;
+        padding-bottom: 93px;
+    }*/
 }
 
 .backdrop__modal--closed {
@@ -108,17 +116,12 @@ textarea {
 
 
 .modal__form--containered {
+
     display: flex;
     margin-bottom: 10px;
     flex-direction: column;
-@media screen  and (min-width:609px) {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    max-width: 450px;
-    width: 100%;
-}
+    /*width: 100%;*/
+
 }
 
 .modal__form--field {
@@ -223,7 +226,7 @@ textarea {
     text-align: center;
     margin-bottom: 30px;
 
-&__button {
+    &__button {
         margin: 0 auto;
         display: block;
         font-family: 'Roboto';
@@ -242,34 +245,35 @@ textarea {
         border-radius: 4px;
     }
 
-&__input {
+    &__input {
         appearance: none;
     }
-&__control {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    width: 16px;
-    height: 15px;
-    background: var(--minor-color);
-    margin-right: 8px;
-    border: 1px solid rgba(33, 33, 33, 1);
-    border-radius: 2px;
-    flex-shrink: 0;
-}
 
-&__icon {
-    opacity: 0;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    width: 16px;
-    height: 15px;
-    background-color: var(--secondary-color);
-    fill: var(--minor-color);
+    &__control {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        width: 16px;
+        height: 15px;
+        background: var(--minor-color);
+        margin-right: 8px;
+        border: 1px solid rgba(33, 33, 33, 1);
+        border-radius: 2px;
+        flex-shrink: 0;
+    }
 
-    
-}
+    &__icon {
+        opacity: 0;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        width: 16px;
+        height: 15px;
+        background-color: var(--secondary-color);
+        fill: var(--minor-color);
+
+
+    }
 }
 
 
