--- a/scss/components/_overlay-section-projects.scss
+++ b/scss/components/_overlay-section-projects.scss
@@ -1,29 +1,174 @@
           .overlay-section__projects {
          display: flex;
          flex-wrap: wrap;
-         
+        
+        
+
+        @media screen and (min-widht:768px) {
+        display: flex;
+        flex-wrap: wrap;
+        flex-basis: 50%;
+        
+                }
+
+        @media screen and (min-widht:1200px) {
+        display: flex;
+        flex-wrap: wrap;
+      
+        
+        }
      }
 
+
+
      .overlay-section__project {
-         width: 370px;
-         margin-right: 30px;
-         margin-bottom: 30px;
+         
          overflow: hidden;
-        
+        @media screen and (min-width:480px) {
+                max-width: 450px;
+            }
+@media screen and (min-width:768px){
+    width: 354px;
+}
+         @media screen and (min-width:1200px) {
+                       max-width: 370px;
+         }
+         
+        }
+
+
+.overlay-section__project:nth-child(1){
+@media screen and (max-widht:1199px){
+  margin-right: 30px; 
+}
+        }
+.overlay-section__project:nth-child(2) {
+    @media screen and (max-widht:1199px) {
+        margin-right: 0;
+    }
+}
+.overlay-section__project:nth-child(3) {
+    @media screen and (max-widht:1199px) {
+        margin-right: 30px;
+    }
+}
+.overlay-section__project:nth-child(4) {
+    @media screen and (max-widht:1199px) {
+        margin-right: 0;
+    }
+}
+
+.overlay-section__project:nth-child(5) {
+    @media screen and (max-widht:1199px) {
+        margin-right: 30px;
+    }
+}
+
+.overlay-section__project:nth-child(6) {
+    @media screen and (max-widht:1199px) {
+        margin-right: 0;
+    }
+}
+.overlay-section__project:nth-child(7) {
+    @media screen and (max-widht:1199px) {
+        margin-right: 30px;
+    }
+}
+
+.overlay-section__project:nth-child(8) {
+    @media screen and (max-widht:1199px) {
+        margin-right: 0;
+    }
+}
+
+ .overlay-section__project:nth-child(9) {
+     @media screen and (max-widht:1199px) {
+         margin-right: 30px;
      }
+ }
+
+.overlay-section__project:nth-child(1) {
+     @media screen and (min-widht:1200px) {
+         margin-right: 30px;
+     }
+ }
+ .overlay-section__project:nth-child(2) {
+     @media screen and (min-widht:1200px) {
+         margin-right: 30px;
+     }
+ }
+ .overlay-section__project:nth-child(3) {
+     @media screen and (min-widht:1200px) {
+         margin-right: 0;
+     }
+ }
+ .overlay-section__project:nth-child(4) {
+     @media screen and (min-widht:1200px) {
+         margin-right: 30px;
+     }
+ }
+ .overlay-section__project:nth-child(5) {
+     @media screen and (min-widht:1200px) {
+         margin-right: 30px;
+     }
+ }
+ .overlay-section__project:nth-child(6) {
+     @media screen and (min-widht:1200px) {
+         margin-right: 0;
+     }
+ }
+ .overlay-section__project:nth-child(7) {
+     @media screen and (min-widht:1200px) {
+         margin-right: 30px;
+     }
+ }
+ .overlay-section__project:nth-child(8) {
+     @media screen and (min-widht:1200px) {
+         margin-right: 30px;
+     }
+ }
+ .overlay-section__project:nth-child(9) {
+     @media screen and (min-widht:1200px) {
+         margin-right: 0;
+     }
+ }
+
+
 
      .overlay-section__project:hover .overlay-section__project--informed {
          transform: translate(0);
      }
 
-     .overlay-section__project:nth-child(3n) {
-         margin-right: 0;
-     }
+.overlay-section__project:nth-child(1n) {
+    @media screen and (min-width:768px) {
+        margin-right: 30px;
+    }
+}
 
-     .overlay-section__project:nth-last-child(-n+3) {
+
+.overlay-section__project:nth-last-child(-n+2) {
+    @media screen and (min-width:768px) {
+        margin-right: 0;
+    }
+}
+
+   .overlay-section__project:nth-child(3n) {
+@media screen and (min-width:1200px) {
+  margin-right: 0;  
+}
+}
+ 
+   
+.overlay-section__project:nth-last-child(-n+3){
+@media screen and (min-width:1200px){
          margin-bottom: 0;
      }
+}
 
+
+
+ 
+     
      .overlay-section__shadow {
          display: block;
          box-shadow: none;
@@ -49,6 +194,84 @@
      }
 
      .overlay-section__project--informed {
+@media screen and (min-width:480px) {
+        max-width: 450px;
+        position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            padding-left: 24px;
+            padding-right: 24px;
+            align-items: center;
+            background-color: var(--secondary-color);
+            color: var(--minor-color);
+            font-family: 'Roboto';
+            font-style: normal;
+            font-weight: 400;
+            font-size: 18px;
+            line-height: 1.56;
+            letter-spacing: 0.03em;
+            transform: translateY(100%);
+            transition-property: transform;
+            transition-duration: 250ms;
+            transition-timing-function: ease-in-out;
+            transition-delay: 250ms;
+            opacity: 0.8;
+    }
+
+    @media screen and (min-width:768px) {
+        max-width: 354px;
+        position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            padding-left: 24px;
+            padding-right: 24px;
+            align-items: center;
+            background-color: var(--secondary-color);
+            color: var(--minor-color);
+            font-family: 'Roboto';
+            font-style: normal;
+            font-weight: 400;
+            font-size: 18px;
+            line-height: 1.56;
+            letter-spacing: 0.03em;
+            transform: translateY(100%);
+            transition-property: transform;
+            transition-duration: 250ms;
+            transition-timing-function: ease-in-out;
+            transition-delay: 250ms;
+            opacity: 0.8;
+    }
+
+    @media screen and (min-width:1200px) {
+        max-width: 370px;
+        position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            padding-left: 24px;
+            padding-right: 24px;
+            align-items: center;
+            background-color: var(--secondary-color);
+            color: var(--minor-color);
+            font-family: 'Roboto';
+            font-style: normal;
+            font-weight: 400;
+            font-size: 18px;
+            line-height: 1.56;
+            letter-spacing: 0.03em;
+            transform: translateY(100%);
+            transition-property: transform;
+            transition-duration: 250ms;
+            transition-timing-function: ease-in-out;
+            transition-delay: 250ms;
+            opacity: 0.8;
+    }
+
          position: absolute;
          top: 0;
          left: 0;
@@ -71,7 +294,9 @@
          transition-timing-function: ease-in-out;
          transition-delay: 250ms;
          opacity: 0.8;
-     }
+
+}
+
 
      .project__section--informed>.overlay-section__project--announced {
          background-color: var(--secondary-color);
@@ -85,7 +310,8 @@
              color: var(--minor-color);
              padding: 63px 24px;
              font-size: 18px;
-         }
+             }
+             
 
      .overlay-section__project--depicted {
          position: relative;
