--- a/scss/components/_preferences-section.scss
+++ b/scss/components/_preferences-section.scss
@@ -1,54 +1,47 @@
- /* section-two*/
  .preferences-section {
      padding-top: 94px;
-     padding-bottom: 94px;
-     
-   
+     padding-bottom: 0;
+
      &__container {
-     padding: 0 15px;
-     /*width: 1200px;*/
-     margin-left: auto;
-     margin-right: auto;
-
-     @media screen and (min-width: 480px) {
-        max-width: 480px;
-        /*margin-left: 0;
-        margin-right: 0;*/
-     }
-
-    @media screen and (min-width: 768px) {
-             width: 768px;
-         }
-
-    @media screen and (min-width: 1200px) {
-    width: 1200px;
-    }
- } 
- 
- &__menu {
-     list-style: none;
-     font-weight: 500;
     
-
-    @media screen and (min-width: 480px) {
-            display: block;
+            /*padding: 0 15px;*/
+            /*width: 1200px;*/
+            padding-left: 15px;
+            padding-right: 15px;
             margin-left: auto;
             margin-right: auto;
+    
+            @media screen and (min-width:480px) {
+                width: 480px;
+            }
+    
+            @media screen and (min-width:768px) {
+                width: 768px;
+            }
+    
+            @media screen and (min-width:1200px) {
+                width: 1200px;
+            }
         }
 
-    @media screen and (min-width: 768px) {
-    display: flex;
-    flex-wrap:wrap;
-    align-items: flex-start;
-    justify-content: center;
-        }
+     &__menu {
+         list-style: none;
+         font-weight: 500;
 
-    @media screen and (min-width: 1200px) {
-    display: flex;
-    align-items: flex-start;
-    justify-content: center;
-                }
- }
+        @media screen and (min-width:768px) {
+           display: flex; 
+           flex-wrap: wrap;
+           align-items: center;
+           justify-content: center;
+         }
+        @media screen and (max-width:768px){
+            display: flex;
+                flex-wrap: wrap;
+                align-items: center;
+                justify-content: center;
+                 }
+         
+     }
 
  }
 
@@ -71,10 +64,6 @@
      color: var(--small-section-title-color);
      margin-top: 30px;
      margin-bottom: 10px;
-
-     @media screen and (max-width:1199px) {
-        text-align: center;
-     }
  }
 
  .preferences-section__menu--titled:last-child {
@@ -82,6 +71,7 @@
  }
 
  .preferences-section__menu--informed {
+    
      font-weight: 400;
      font-size: 16px;
      line-height: 1.71;
@@ -91,25 +81,15 @@
  .preferences-section__menu--itemed {
      margin-right: 30px;
      width: 270px;
+     text-align: center;
+     padding-top: 20px;
+     padding-bottom: 20px;
 
-   @media screen and (max-width:480px) {
-    max-width: 430px;
-    margin-left: 0;
-    margin-right: 0;
-   }
 
-     @media screen and(max-width:767px) {
-        margin-bottom: 30px;
-        margin-right: 30px;
-        margin-left: auto;
-        margin-right: auto;
-     }
 
-          @media screen and(max-width:1199px) {
-              margin-bottom: 50px;
-            margin-right: 30px;
-          }
- }
+        
+       
+}
 
  .preferences-section__menu--itemed:last-child {
      margin-right: 0;
