--- a/scss/components/_team-section.scss
+++ b/scss/components/_team-section.scss
@@ -5,11 +5,26 @@
     padding-bottom: 94px;
 
   &__container {
-    padding: 0 15px;
-    width: 1200px;
-    margin-left: auto;
-    margin-right: auto;
-}
+
+        /*padding: 0 15px;*/
+        /*width: 1200px;*/
+        padding-left: 15px;
+        padding-right: 15px;
+        margin-left: auto;
+        margin-right: auto;
+
+        @media screen and (min-width:480px) {
+            width: 480px;
+        }
+
+        @media screen and (min-width:768px) {
+            width: 768px;
+        }
+
+        @media screen and (min-width:1200px) {
+            width: 1200px;
+        }
+    }
   
 &__title {
     color: var(--color-main);
@@ -20,20 +35,81 @@
     margin-bottom: 50px;
 }
 &__menu {
+    
+     margin: 0 auto;   
+   
+     
+    
+
+    @media screen and (min-width:768px) {
+    display: flex;
+    
+    text-align: center;
+   
+    }
+@media screen and (max-width:1199px){
+   flex-wrap: wrap; 
+}
+
+
+    @media screen and (min-width:1200px) {
     display: flex;
     margin: 0 auto;
+         }
+
+    
 }
 
 &__menu:no(:last-child) {
     margin-right: 0px;
 }
 &__member {
-    margin-right: 30px;
+    margin-bottom: 30px;
+    margin-right: auto;
+    margin-left: auto;
     background-color: var(--minor-color);
     width: 270px;
     box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
     border-radius: 0px 0px 4px 4px;
+
+    
+
+    @media screen and (min-width:768px) {
+    margin-right:0;
+
+    
+    
+        }
+@media screen and (min-width:1200px) {
+    margin-right: 30px;
+
 }
+}
+&__member:nth-child(1) {
+    @media screen and (min-width:768px){
+        margin-right: 30px; 
+        margin-bottom: 30px;
+       
+    }
+}
+
+&__member:nth-child(2) {
+    @media screen and (min-width:768px) {
+    margin-bottom: 30px;
+    }
+}
+&__member:nth-child(3) {
+    @media screen and (min-width:768px) {
+        margin-right: 30px;
+    }
+}
+
+&__member:nth-child(4) {
+    @media screen and (max-width:767px) {
+        margin-bottom: 0;
+    }
+}
+
 &__networks {
     list-style: none;
     display: inline-flex;
