--- a/scss/components/_activities-section.scss
+++ b/scss/components/_activities-section.scss
@@ -1,5 +1,6 @@
 /* section-three*/
 .activities-section{
+    justify-content: flex-start;
     @media screen and (max-width:1199px) {
         display: none;
     }
@@ -17,6 +18,7 @@
         padding-right: 15px;
         margin-left: auto;
         margin-right: auto;
+        justify-content: flex-start;
 
         @media screen and (min-width:480px) {
             width: 480px;
@@ -47,13 +49,10 @@
     font-weight: 500;
     display: flex;
     align-items: flex-start;
-    justify-content: center;
+    justify-content: flex-start;
+    padding-top: 0;
 }
-
 }
-
-
-
 
 .activities-section__menu--imaged {
     position: relative;
