--- a/scss/components/_client-section.scss
+++ b/scss/components/_client-section.scss
@@ -1,4 +1,160 @@
 /* section-five*/
+.client-section {
+    padding-top: 94px;
+    padding-bottom: 94px;
+
+    &__container {
+    
+            
+            padding-left: 15px;
+            padding-right: 15px;
+            margin-left: auto;
+            margin-right: auto;
+    
+            @media screen and (min-width:480px) {
+                width: 480px;
+            }
+    
+            @media screen and (min-width:768px) {
+                width: 768px;
+            }
+    
+            @media screen and (min-width:1200px) {
+                width: 1200px;
+            }
+        }
+
+    &__title {
+        font-weight: 700;
+        font-style: normal;
+        font-size: 36px;
+        line-height: 1.16;
+        text-align: center;
+        letter-spacing: 0.03em;
+        color: var(--color-main);
+        margin-bottom: 50px;
+    }
+
+    &__menu {
+        list-style: none;
+        display: flex;
+        font-weight: 500;
+        list-style: none;
+        justify-content: space-between;
+        margin-left: 0px;
+        margin-right: 30px;
+        text-align: center;
+        @media screen and (max-width:369px) {
+                display: block;
+                align-items: center;
+                text-align: center;
+                justify-content: center;
+                width: auto;
+                margin-left: auto;
+                margin-right: auto;
+                padding-left: 65px;
+                padding-right: 65px;
+            }
+        @media (min-width:370px) and (max-width:767px) {
+                display: flex;
+                flex-basis: 50%;
+                justify-content: space-between;
+                }
+        @media (min-width:768px) and (max-width:1199px) {
+            
+            
+            
+        }
+    }
+
+    &__menu:last-child {
+        margin-right: 0;
+    }
+
+    &__item {
+        display: block;
+        content: "";
+        width: 170px;
+        height: 92px;
+        border: 1px solid var(--background-color);
+        border-radius: 4px;
+        background-size: contain;
+        background-repeat: no-repeat;
+        background-position: center;
+        transition-property: border;
+        transition-duration: 250ms;
+        transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+        transition-delay: none; 
+@media (min-width:768px) and (max-width:1199px){
+    width: 226px;
+    width: 100%;
+    margin-right: 30px;
+    margin-bottom: 30px;
+}
+       
+    }
+
+    &__item:hover {
+        border: 1px solid var(--secondary-color);
+    }
+
+}
+
+.client-section__item:nth-child(3){
+    @media (min-width:768px) and (max-width:1199px){
+        margin-right: 0;
+    }
+}
+.client-section__item:nth-child(4) {
+    @media (min-width:768px) and (max-width:1199px) {
+        margin-bottom: 0;
+    }
+}
+
+.client-section__item:nth-child(5) {
+    @media (min-width:768px) and (max-width:1199px) {
+        margin-bottom: 0;
+    }
+}
+
+.client-section__item:nth-child(6) {
+    @media (min-width:768px) and (max-width:1199px) {
+        margin-right: 0;
+        margin-bottom: 0;
+    }
+}
+
+.client-section__item--visualized {
+    fill: var(--icon-client-color);
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    transition-property: fill;
+    transition-duration: 250ms;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+    transition-delay: none;
+}
+
+.client-section__item--visualized:focus,
+.client-section__item--visualized:hover {
+    fill: var(--secondary-color);
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 .client-section {
     padding-top: 94px;
@@ -36,28 +192,49 @@
     margin-bottom: 50px;
 }
 &__menu {
-    list-style: none;
-    display: flex;
-    font-weight: 500;
-    list-style: none;
-    justify-content: space-between;
-    margin-left: 0px;
-    margin-right: 30px;
-    text-align: center;
+    margin-left: auto;
+    margin-right: auto;
+    @media screen and (max-width:369px) {
+            display: block;
+            align-items: center;
+            text-align: center;
+            justify-content: center;
+            width: auto;
+            margin-left: auto;
+            margin-right: auto;
+            padding-left: auto;
+            padding-right: auto;
+        }
+    @media (min-width:320px) and (max-width:479px){
+        display: flex;
+            flex-basis: 50%;
+            margin: 0 auto;
+    }
     
+
+
+     @media (min-width:480px) and (max-width:767px){
+        display: flex;
+        flex-basis: 50%;
+        margin: 0 auto;
+    margin-left: 0px;
+        margin-right: 30px;
+    }
     @media screen and (max-width:1199px) {
         display: flex;
         flex-wrap: wrap;
-        
+        margin-left: 0px;
+    margin-right: 30px;
+    font-weight: 500;
+    
+        justify-content: space-between;
+    
+        text-align: center;
       
        
         }
 
-    @media screen and (max-width:767px){
-        flex-basis: 50%;
-        margin: 0 auto;
-       
-    }
+   
     
 
 }
@@ -137,6 +314,7 @@
     transition-duration: 250ms;
     transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
     transition-delay: none;
+    
 }
 
 .client-section__item--visualized:focus,
