--- a/scss/components/_footer.scss
+++ b/scss/components/_footer.scss
@@ -151,11 +151,20 @@
 
 .footer__network--signed {
     margin-right: 8px;
-    min-width: 358px;
+    
     height: 50px;
     border: 1px solid rgba(255, 255, 255, 0.3);
     border-radius: 4px;
     background: #2F303A;
+    @media screen and (max-width:358px) {
+        width: 100%;
+        margin-left: auto;
+        margin-right: auto;
+        }
+        @media screen  and (min-width:359px){
+min-width: 358px;
+            
+        }
 }
 
 .footer__network--emailed {
@@ -168,6 +177,8 @@
     padding-top: 15px;
     padding-bottom: 15px;
     color: #c4c4c4;
+
+   
 }
 
 .footer__button--signed {
@@ -272,6 +283,13 @@ margin-left: auto;
     margin-right: auto;
 }
 }
+placeholder{
+  @media screen and (max-width:479px) {
+   width: 100vw; 
+}  
+}
+
+
 
 .footer__button--signed-mobile{
 @media screen and (max-width:767px){
