--- a/scss/components/_modal.scss
+++ b/scss/components/_modal.scss
@@ -35,14 +35,25 @@
     opacity: 1;
     transition: opacity 250ms cubic-bezier (0.4, 0, 0.2, 1);
 
-    /*@media screen and (max-width:767px) {
-        display: block;
-        width: 450px;
-        padding-left: 15px;
-        padding-right: 15px;
-        padding-top: 93px;
-        padding-bottom: 93px;
-    }*/
+    @media screen and (max-width:480px) {
+            width: 100%;
+            height: auto;
+            padding: 15px;
+    }
+@media (min-width:481) and (max-width:1199px){
+    width: 480px;
+        height: auto;
+        padding: 15px;
+}
+
+@media screen and (min-width:1200px) {
+    width: 528px;
+        min-height: 581px;
+        padding: 25px;
+    
+}
+
+   
 }
 
 .backdrop__modal--closed {
@@ -112,6 +123,13 @@ textarea {
     align-items: center;
     letter-spacing: 0.03em;
     color: var(--color-main);
+
+    @media screen and (max-width:1199px) {
+        display: flex;
+        flex-wrap: wrap;
+        width: auto;
+        
+    }
 }
 
 
@@ -302,4 +320,12 @@ placeholder {
     font-size: 12px;
     line-height: 1.16;
     letter-spacing: 0.01em;
+}
+
+.checkbox--current{
+@media screen and (max-width:428px){
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: flex-start;
+}
 }
