--- a/scss/components/_page-header.scss
+++ b/scss/components/_page-header.scss
@@ -276,8 +276,8 @@
 
 .header__button{
 position: absolute;
-    top: 20px;
-    right: 20px;
+    top: 3-px;
+    right: 30px;
     
 display: inline-flex;
 margin: 0;
