--- a/scss/components/_client-section.scss
+++ b/scss/components/_client-section.scss
@@ -44,7 +44,7 @@
         margin-left: 0px;
         margin-right: 30px;
         text-align: center;
-        @media screen and (max-width:369px) {
+        @media screen and (max-width:479px) {
                 display: block;
                 align-items: center;
                 text-align: center;
@@ -55,16 +55,17 @@
                 padding-left: 65px;
                 padding-right: 65px;
             }
-        @media (min-width:370px) and (max-width:767px) {
+        @media (min-width:480px) and (max-width:767px) {
                 display: flex;
+                flex-wrap: wrap;
                 flex-basis: 50%;
                 justify-content: space-between;
                 }
-        @media (min-width:768px) and (max-width:1199px) {
-            
-            
-            
+        @media (min-width:768px) and (max-width:1199px){
+        display: flex;
+            flex-wrap: wrap;
         }
+       
     }
 
     &__menu:last-child {
@@ -100,21 +101,160 @@
 
 }
 
+.client-section__item:nth-child(1){
+@media screen and (max-width:369px) {
+    width: 100%;
+    margin-bottom: 30px;
+    margin-left: auto;
+        margin-right: auto;
+}
+@media (min-width:370px) and (max-width:479px) {
+        width: 210px;
+        margin-bottom: 30px;
+        margin-left: auto;
+            margin-right: auto;
+       
+       
+    }
+@media (min-width:480px)  and (max-width:767px) {
+  width: 210px;  
+margin-bottom: 30px;
+}
+@media (min-width:768px) and (max-width:1199px) {
+    width: 226px;
+    
+}
+@media screen and (min-width:1200px) {
+    width: 170px;
+}
+
+}
+
+.client-section__item:nth-child(2) {
+@media screen and (max-width:369px) {
+    width: 100%;
+        margin-bottom: 30px;
+        margin-left: auto;
+            margin-right: auto;
+    }
+
+        @media (min-width:370px) and (max-width:479px) {
+            width: 210px;
+            margin-bottom: 30px;
+        margin-left: auto;
+            margin-right: auto;
+        }
+
+    @media (min-width:480px) and (max-width:767px) {
+        width: 210px;
+        margin-bottom: 30px;
+    }
+
+    @media (min-width:768px) and (max-width:1199px) {
+        width: 226px;
+    }
+
+    @media screen and (min-width:1200px) {
+        width: 170px;
+    }
+    @media screen and (max-width:369px) {
+    margin-bottom: 30px;
+}
+}
+
 .client-section__item:nth-child(3){
+    @media screen and (max-width:369px) {
+        width: 100%;
+            margin-bottom: 30px;
+            margin-left: auto;
+                margin-right: auto;
+        }
+   @media (min-width:370px) and (max-width:479px) {
+       width: 210px;
+    margin-bottom: 30px;
+    margin-left: auto;
+        margin-right: auto;
+   
+
+   }
+    
+        @media (min-width:480px) and (max-width:767px) {
+            width: 210px;
+            margin-bottom: 30px;
+        }
+    
+        @media (min-width:768px) and (max-width:1199px) {
+            width: 226px;
+            margin-right: 30px;
+        }
+    
+        @media screen and (min-width:1200px) {
+            width: 170px;
+        }
     @media (min-width:768px) and (max-width:1199px){
         margin-right: 0;
     }
 }
+
 .client-section__item:nth-child(4) {
+    @media screen and (max-width:369px) {
+        width: 100%;
+            margin-bottom: 30px;
+            margin-left: auto;
+                margin-right: auto;
+        }
     @media (min-width:768px) and (max-width:1199px) {
         margin-bottom: 0;
     }
+           @media (min-width:370px) and (max-width:479px) {
+               width: 210px;
+            margin-bottom: 30px;
+            margin-left: auto;
+                margin-right: auto;
+           }
+    
+        @media (min-width:480px) and (max-width:767px) {
+            width: 210px;
+            margin-bottom: 30px;
+        }
+    
+        @media (min-width:768px) and (max-width:1199px) {
+            width: 226px;
+        }
+    
+        @media screen and (min-width:1200px) {
+            width: 170px;
+        }
+    
 }
 
 .client-section__item:nth-child(5) {
-    @media (min-width:768px) and (max-width:1199px) {
-        margin-bottom: 0;
-    }
+    @media screen and (max-width:369px) {
+        width: 100%;
+            margin-bottom: 30px;
+            margin-left: auto;
+                margin-right: auto;
+        }
+        @media (min-width:370px) and (max-width:479px) {
+               width: 210px;
+          margin-left: auto;
+          margin-right: auto;
+            margin-bottom: 30px;
+           }
+    
+        @media (min-width:480px) and (max-width:767px) {
+            width: 210px;
+             margin-bottom: 30px;
+        }
+    
+        @media (min-width:768px) and (max-width:1199px) {
+             width: 210px;
+              margin-bottom: 0;
+        }
+    
+        @media screen and (min-width:1200px) {
+            width: 170px;
+        }
 }
 
 .client-section__item:nth-child(6) {
@@ -122,7 +262,34 @@
         margin-right: 0;
         margin-bottom: 0;
     }
+        @media screen and (max-width:369px) {
+            width: 100%;
+            margin-left: auto;
+                margin-right: auto;
+           
+        }
+           @media (min-width:370px) and (max-width:479px) {
+               width: 210px;
+            margin-left: auto;
+                margin-right: auto;
+           }
+    
+        @media (min-width:480px) and (max-width:767px) {
+            width: 210px;
+        }
+    
+        @media (min-width:768px) and (max-width:1199px) {
+            width: 226px;
+        }
+    
+        @media screen and (min-width:1200px) {
+            width: 170px;
+        }
 }
+.client-section__item{
+  
+
+
 
 .client-section__item--visualized {
     fill: var(--icon-client-color);
@@ -135,6 +302,22 @@
     transition-duration: 250ms;
     transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
     transition-delay: none;
+@media screen and (max-width:479px) {
+        width: 100%;
+    }
+
+    @media (min-width:480px) and (max-width:767px) {
+        width: 210px;
+    }
+
+    @media (min-width:768px) and (max-width:1199px) {
+        width: 226px;
+    }
+
+    @media screen and (min-width:1200px) {
+        width: 170px;
+    }
+
 }
 
 .client-section__item--visualized:focus,
@@ -244,7 +427,7 @@
 &__item {
     display: block;
     content: "";
-    width: 170px;
+   
     height: 92px;
     border: 1px solid var(--background-color);
     border-radius: 4px;
@@ -256,8 +439,6 @@
     transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
     transition-delay: none;
 
-
-    
 @media screen and (max-width:785px){
     margin-bottom: 30px;
 }
@@ -300,9 +481,11 @@
 &__item:hover {
     border: 1px solid var(--secondary-color);
 }
-
 }
-
+.client-section__item--visualized:focus,
+.client-section__item--visualized:hover {
+    fill: var(--secondary-color);
+}
 .client-section__item--visualized {
     fill: var(--icon-client-color);
     width: 100%;
@@ -316,8 +499,4 @@
     transition-delay: none;
     
 }
-
-.client-section__item--visualized:focus,
-.client-section__item--visualized:hover {
-    fill: var(--secondary-color);
 }
