--- a/scss/components/_page-header.scss
+++ b/scss/components/_page-header.scss
@@ -227,6 +227,25 @@
             display: none;
         }
 }
+.header__item--current::after {
+    content: '';
+
+    position: absolute;
+    left: 0;
+    bottom: -32px;
+
+    display: block;
+    width: 100%;
+    height: 5px;
+    background-color: var(--secondary-color);
+
+    opacity: 1;
+    transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    @media screen and (max-width:767px) {
+            display: none;
+        }
+}
+
 
 .header__item--blue {
     color: var(--secondary-color);
